--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "express-validator": "^6.0.1",
     "express-wolox-logger": "0.0.2",
     "jwt-simple": "^0.5.6",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "pg": "^7.4.1",
     "save": "^2.4.0",
