--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "express": "^4.16.2",
     "express-validator": "^6.0.1",
     "express-wolox-logger": "0.0.2",
+    "factory-girl": "^5.0.4",
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "nock": "^10.0.6",
     "pg": "^7.4.1",
     "save": "^2.4.0",
     "sequelize": "^4.34.0",
